--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 		<p>stay safe</p>
 </footer>
 
-		<script type="module" src="../src/data.js"></script>
-		<script type="module" src="src/estimator.js"></script>
+		<script type="module" src="./script/data.js"></script>
+		<script type="module" src="./script/ui.js"></script>
 </body>
 </html>
 
